fixed bug 1.8: Adjusted the avlinks a rules width to 88% to stop the overflow.

--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -359,7 +359,7 @@ footer {
         letter-spacing: 0.15em;
         border-bottom: 1px solid #2C2828;
         display: block;
-        width: 100%;
+        width: 88%;
         color: #FAF7F2;
     }
 
